[package]
name = "xbot"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
publish = false

[dependencies]
anyhow = "1.0.72"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
once_cell = "1.18.0"
poise = { version = "0.5.5", default-features = false }
regex = { version = "1.9.1", features = ["perf", "std"], default-features = false }
reqwest = { version = "0.11.18", features = ["json", "native-tls"], default-features = false }
serde = { version = "1.0.181", features = ["derive"] }
serenity = { version = "0.11.6", features = ["native_tls_backend"], default-features = false }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
